--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,33 @@
 version: "3"
 services:
     mongo:
+      image: mongo:3.6
+      environment:
+        MONGO_INITDB_ROOT_USERNAME: admin
+        MONGO_INITDB_ROOT_PASSWORD: admin
+    redis:
+      image: redis:alpine
+    rabbitmq:
+      image: rabbitmq:alpine
+    postgres:
+      image: postgres:alpine
+      environment:
+        PGDATA: /var/lib/postgresql/data/pgdata
+        POSTGRES_DB: heimdall
+        POSTGRES_PASSWORD: '123456'
+        POSTGRES_USER: postgres
+      ports:
+      - 5433:5432/tcp
+    mongo:
         image: mongo
         volumes:
             - ./data/mongo:/data/db
-        networks:
-            - tsuru_net
         ports:
             - 27017:27017
     redis:
         image: redis
         volumes:
             - ./data/redis:/data
-        networks:
-            - tsuru_net
         ports:
             - "6379:6379"
     registry:
@@ -23,8 +37,6 @@ services:
             - REGISTRY_STORAGE_DELETE_ENABLED=true
         volumes:
             - ./data/registry:/var/lib/registry
-        networks:
-            - tsuru_net
         ports:
             - 5000:5000
     planb:
@@ -34,8 +46,6 @@ services:
             - redis
         ports:
             - "8989:8989"
-        networks:
-            - tsuru_net
     gandalf:
         image: tsuru/gandalf:latest
         environment:
@@ -47,10 +57,8 @@ services:
             - ./data/gandalf/repositories:/var/lib/gandalf/repositories
             - ./data/gandalf/ssh:/home/git/.ssh
             - ./misc/git-hooks:/home/git/bare-template/hooks
-        networks:
-            - tsuru_net
         ports:
-            - "22:22"
+            - "2222:22"
     api:
         build:
             context: .
@@ -62,8 +70,6 @@ services:
             - gandalf
             - redis
             - registry
-        networks:
-            - tsuru_net
     node1:
         image: docker:dind
         privileged: true
@@ -71,21 +77,3 @@ services:
         ports:
             - "2375:2375"
             - "32768-32772:32768-32772"
-        networks:
-            - tsuru_net
-    service1:
-        build:
-            context: https://github.com/tsuru/eviaas.git
-        ports:
-            - 8888:8888
-        networks:
-            tsuru_net:
-                ipv4_address: 172.42.0.20
-
-networks:
-  tsuru_net:
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-      - subnet: 172.42.0.0/24
