--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,19 @@
 version: "3"
 services:
     mongo:
+      container_name: mongo_heimdall
       image: mongo:3.6
       environment:
         MONGO_INITDB_ROOT_USERNAME: admin
         MONGO_INITDB_ROOT_PASSWORD: admin
     redis:
+      container_name: redis_heimdall
       image: redis:alpine
     rabbitmq:
+      container_name: rabbitmq_heimdall
       image: rabbitmq:alpine
     postgres:
+      container_name: postgres_heimdall
       image: postgres:alpine
       environment:
         PGDATA: /var/lib/postgresql/data/pgdata
@@ -19,18 +23,21 @@ services:
       ports:
       - 5433:5432/tcp
     mongo:
+        container_name: mongo_tsuru
         image: mongo
         volumes:
             - ./data/mongo:/data/db
         ports:
             - 27017:27017
     redis:
+        container_name: redis_tsuru
         image: redis
         volumes:
             - ./data/redis:/data
         ports:
             - "6379:6379"
     registry:
+        container_name: registry_tsuru
         image: registry:2
         environment:
             - REGISTRY_STORAGE_FILESYSTEM_ROOTDIRECTORY=/var/lib/registry
@@ -40,6 +47,7 @@ services:
         ports:
             - 5000:5000
     planb:
+        container_name: planb_tsuru
         image: tsuru/planb
         command: --read-redis-host=redis --write-redis-host=redis
         depends_on:
@@ -47,6 +55,7 @@ services:
         ports:
             - "8989:8989"
     gandalf:
+        container_name: gandalf
         image: tsuru/gandalf:latest
         environment:
             - MONGODB_ADDR=mongo
@@ -60,6 +69,7 @@ services:
         ports:
             - "2222:22"
     api:
+        container_name: tsuru_api
         build:
             context: .
             dockerfile: Dockerfile.dev
@@ -71,6 +81,7 @@ services:
             - redis
             - registry
     node1:
+        container_name: node1_tsuru
         image: docker:dind
         privileged: true
         command: --insecure-registry 10.200.10.1:5000
